[DevTools] Make ForwardingAgentHost work with flatten protocol

Bug: 906483
Change-Id: I3da2cd45f2ab6e2d88e42c97f0de48208f210ad6
Reviewed-on: https://chromium-review.googlesource.com/c/1350966
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Commit-Queue: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611195}